News scrollbar issue

--- a/webroot/css/styles.less
+++ b/webroot/css/styles.less
@@ -14064,6 +14064,12 @@ img {
 
                                         &:hover {
 							overflow-y: auto;
+                                                        color: #303030;
+                                                        font-size: 12px;
+                                                        line-height: 16px;
+                                                        margin-bottom: 10px;
+                                                        height: 200px;
+                                                        display: block;
                                                        							
 						}
 					
